# docsearch

./: .gitignore  Cargo.toml  TODO.txt
src/: app.rs  daemon.rs  embed.rs  file_test.rs  main.rs  open_file.rs  pdf_test.rs  ppt_test.rs  search.rs  search_new.rs  watcher.rs
src/repository/: db.rs
