[package]
name = "docsearch"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"]}
pdf-extract = "0.7"
fastembed = "5"
dirs = "5"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-native-tls", "macros"] }
tokio = { version = "1", features = ["full"] }
bytemuck = "1.14"
