[package]
name = "docsearch"
version = "0.1.0"
edition = "2021"  # Fix: 2024 isn't valid

[dependencies]
clap = { version = "4", features = ["derive"]}
fastembed = "5"
dirs = "5"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-native-tls", "macros"] }
tokio = { version = "1", features = ["full"] }
bytemuck = "1.14"
faiss = "0.13.0"
ratatui = "0.26"
crossterm = "0.27"
zip = "0.6"
quick-xml = "0.31"
notify = { version = "8.1.0", features = ["serde"] }
pdf-extract = "0.7"
pdf_oxide = "0.3"
